==> wbasser/SoftwareLibraries/HAL/TI/Stellaris/UART/Core/Trunk/Uart.c <==
#include "UART/Uart.h"
#include "Interrupt/Interrupt.h"
#define MAX_NUM_UARTS 3
#define BUFCTL_SIZE sizeof( BUFCTL )
#define LCLCTL_SIZE sizeof( LCLCTL )
#define PHYLOGMAP_SIZE  sizeof( PHYLOGMAP )

void Uart_Initialize( void )
{
  UARTERR     eError = UART_ERR_NONE;
  PUARTDEF    ptDef;
  PLCLCTL     ptCtl;
  U32         uConfig;
  UARTDEVENUM eDev;

  // check for a valid UART
  for ( eDev = 0; eDev < UART_DEV_ENUM_MAX; eDev++ )
  {
    // get pointer to the definition structure
    ptDef = ( PUARTDEF )&atUartDefs[ eDev ];
    
    // get pointer to the control
    ptCtl = &atLclCtls[ eDev ];
    
    // clear the receive/transmit buffers
    ptCtl->tRxBuf.wWrIdx = ptCtl->tRxBuf.wRdIdx = ptCtl->tRxBuf.wCount = 0;
    ptCtl->tTxBuf.wWrIdx = ptCtl->tTxBuf.wRdIdx = ptCtl->tTxBuf.wCount = 0;
    
    // build the config value
    uConfig = ptDef->eParity | ptDef->eWrdLength | ptDef->eStop;
    
    // initialize the UART/GPIO peripherals
    MAP_SysCtlPeripheralEnable( ptDef->uDevPeriph );
    MAP_SysCtlPeripheralEnable( ptDef->uGpioPeriph );
      
    // initialize the pins
    if ( CLASS_IS_TEMPEST || CLASS_IS_FIRESTORM )
    {
      MAP_GPIOPinConfigure( ptDef->uRxPinFunc	 );
      MAP_GPIOPinConfigure( ptDef->uTxPinFunc	 );
    }
    
    // initialize the normal GPIO pins as UARTS
    MAP_GPIOPinTypeUART( ptDef->uGpioBase, ( ptDef->nRxPin | ptDef->nTxPin ));
    
    // set the configuration
    SetConfig( eDev, ptDef->uDevBase, ptDef->uBaudRate, uConfig );
  }
}

UARTERR Uart_Write( UARTDEVENUM eDev, PU8 pnData, U16 wLength, PU16 pwBytesWritten )
{
  UARTERR   eError = UART_ERR_NONE;
  PUARTDEF  ptDef;
  PLCLCTL   ptCtl;
  U16       wBytesRemaining, wIdx;
  PHYDEV    ePhy;
 
  // check for a valid UART
  if ( eDev < UART_DEV_ENUM_MAX )
  {
    // get pointers to the control/def structure
    ptDef = ( PUARTDEF )&atUartDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    
    // compute the bytes written
    wBytesRemaining = ptDef->wTxBufSize - ptCtl->tTxBuf.wCount;
    *pwBytesWritten = MIN( wBytesRemaining, wLength );
    
    // for each byte
    Interrupt_Disable( );
    for ( wIdx = 0; wIdx < *pwBytesWritten; wIdx++ )
    {
      // put in buffer/adjust pointer/increment count
      *( ptDef->pnTxBuffer + ptCtl->tTxBuf.wWrIdx++ ) = *( pnData + wIdx );
      ptCtl->tTxBuf.wWrIdx %= ptDef->wTxBufSize;
      ptCtl->tTxBuf.wCount++;
    }
    Interrupt_Enable( );
    
    // set the appropriate interrupt handler/IRQ
    switch( ptDef->uDevBase )
    {
      case UART0_BASE :
        ePhy = PHY_UART_DEV0;
        break;
        
      case UART1_BASE :
        ePhy = PHY_UART_DEV1;
        break;
        
      case UART2_BASE :
        ePhy = PHY_UART_DEV2;
        break;
        
      default :
        break;
    }

    // prime the transmitter
    PrimeTransmit( ePhy, ptDef, ptCtl );
    MAP_UARTIntEnable( ptDef->uDevBase, UART_INT_TX );
  }
  else
  {
    // illegal device
    eError = UART_ERR_ILLDEV;
  }
  
  // return the error
  return( eError );
}

UARTERR Uart_Read( UARTDEVENUM eDev, PU8 pnData, U16 wLength, PU16 pwBytesRead )
{
  UARTERR   eError = UART_ERR_NONE;
  PUARTDEF  ptDef;
  PLCLCTL   ptCtl;
  U16       wBytesAvailable, wIdx;
  
  // check for a valid UART
  if ( eDev < UART_DEV_ENUM_MAX )
  {
    // get pointers to the control/def structure
    ptDef = ( PUARTDEF )&atUartDefs[ eDev ];
    ptCtl = &atLclCtls[ eDev ];
    
    // compute the bytes written
    wBytesAvailable = ptDef->wRxBufSize - ptCtl->tRxBuf.wCount;
    *pwBytesRead = MIN( wBytesAvailable, wLength );
    
    // for each byte
    Interrupt_Disable( );
    for ( wIdx = 0; wIdx < *pwBytesRead; wIdx++ )
    {
      // put in buffer/adjust pointer/increment count
       *( pnData + wIdx ) = *( ptDef->pnRxBuffer + ptCtl->tRxBuf.wRdIdx++ );
      ptCtl->tRxBuf.wRdIdx %= ptDef->wRxBufSize;
      ptCtl->tRxBuf.wCount--;
    }
    Interrupt_Enable( );
  }
  else
  {
    // illegal device
    eError = UART_ERR_ILLDEV;
  }
  
  // return the error
  return( eError );
}

static void IrqCommonHandler( PHYDEV ePhy )
{
  U32	              uInts;
  U32	              uChar;
  PUARTDEF          ptDef;
  PLCLCTL           ptCtl;
  PVUARTINTCALLBACK pvCallBack;
  UARTDEVENUM       eDev;
  
  // get the logical device
  eDev = atMaps[ ePhy ].eDev;
  
  // get pointers to the control/def structure
  ptDef = ( PUARTDEF )&atUartDefs[ eDev ];
  ptCtl = &atLclCtls[ eDev ];
 
  // get/clear the interrupt source
  uInts = MAP_UARTIntStatus( ptDef->uDevBase, TRUE );
  MAP_UARTIntClear( ptDef->uDevBase, uInts );
  
  // get the callback
  pvCallBack = ptDef->pvCallBack;
  
  // was this a RX interrupt
  if ( uInts & ( UART_INT_RX | UART_INT_RT ))
  {
    // get all the available character from the uART
    while( MAP_UARTCharsAvail( ptDef->uDevBase ))
    {
      // get the character/add to queue
      uChar = MAP_UARTCharGetNonBlocking( ptDef->uDevBase );
      
      // if room
      if ( ptCtl->tRxBuf.wCount < ptDef->wRxBufSize )
      {
        // stuff in buffer/adust index/increment count
        *( ptDef->pnRxBuffer + ptCtl->tRxBuf.wWrIdx++ ) = ( U8 )uChar;
        ptCtl->tRxBuf.wWrIdx %= ptDef->wRxBufSize;
        ptCtl->tRxBuf.wCount++;
      }

      // check for callback
      if ( pvCallBack != NULL )
      {
        // call the callback with a receive char event
        pvCallBack( UART_IRQ_EVENT_RXCHAR, ( U8 )uChar );
      }
    }
  }

  // was this a TX interrupt
  if ( uInts & UART_INT_TX )
  {
    // prime the transmitter
    PrimeTransmit( ePhy, ptDef, ptCtl );

    // if queue is empty, turn off interrupt
    if ( ptCtl->tTxBuf.wCount == 0 )
    {
      // turn off finterrupt
      MAP_UARTIntDisable( ptDef->uDevBase, UART_INT_TX );
    }
    
    // check for callback
    if ( pvCallBack != NULL )
    {
      // call back with the appropriate TX event
      pvCallBack(( ptCtl->tTxBuf.wCount == 0 ) ? UART_IRQ_EVENT_TXCMP : UART_IRQ_EVENT_TXEMP, 0 );
    }
  }

  // was this a break detect event
  if ( uInts & UART_INT_BE )
  {
    // check for callback
    if ( pvCallBack != NULL )
    {
      // call the callback with the breadk detect event
      pvCallBack( UART_IRQ_EVENT_BRKDET, 0 );
    }
  }
}
